--- a/style/index.css
+++ b/style/index.css
@@ -2,13 +2,14 @@ body{
     max-width: 200px;
 }
 
-element.style{
+/*element.style{
     flex-direction:column;
     justify-content: flex-end;
-}
+}*/
 
-.flex__squares{
+.red-box{
     z-index: 10;
+    margin-left: 50px;
     background-color: #370617;
     height: 50vh; 
     width: 100vh;
@@ -18,8 +19,9 @@ element.style{
     align-items: center;
 }
 
-.flex__circles{
+.yellow-box{
     margin-top: 10px;
+    margin-left: 50px;
     z-index: 10;
     background-color: #FAA307;
     height: 50vh; 
@@ -31,10 +33,86 @@ element.style{
 }
 
 .first-box{
-    display: flex;
+    /*display: flex;
     border-radius: 0 0 0 10px;
     margin: 20px;
     padding: 20px;
-    color: rgb(102, 32, 110);
+    color: rgb(102, 32, 110);*/
+    background-color: #F48C06;
+    border-radius: 15px;
+    min-width: 400px;
+    min-height: 100px;
+    margin: 20px;
+    display: flex;
+    justify-content: flex-start;
+    align-items:flex-start;
+    flex-basis: 180px;
 }
 
+.first-box-dots{
+    /*display: flex;
+    margin: 20px;
+    padding: 20px;
+    color: rgb(102, 32, 110);*/
+    background-color: #03071E;
+    border-radius: none;
+    min-width: 270px;
+    min-height: 50px;
+    margin: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items:center;
+    flex-basis: 180px;
+}
+
+
+.container {
+    border: 5px dotted coral;
+    position: relative;
+    width: 70%;
+    min-height: 50%;
+    padding: 25px 0;
+    display: flex;
+    justify-content: flex-start;
+
+    align-items: flex-start;
+
+    flex-direction: column; 
+ 
+}
+
+.card {
+    background-color: darkcyan;
+    border: 5px solid black;
+    border-radius: 15px;
+    min-width: 100px;
+    min-height: 100px;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 180px;
+}
+
+.first {
+    /*
+    flex-grow: 2;
+    order: 1; */
+}
+
+.last {
+    /*order:-1*/
+}
+
+.second {
+    background-color: darkgrey;
+}
+
+.large {
+    flex-wrap: wrap;
+    /*
+    flex-wrap: nowrap;
+    flex-wrap: wrap-reverse;
+    */
+    min-height: 60%;
+}
