--- a/style/index.css
+++ b/style/index.css
@@ -32,28 +32,134 @@ body{
     align-items: center;
 }
 
+/*The squares with squares in them*/
+
 .first-box{
-    /*display: flex;
-    border-radius: 0 0 0 10px;
-    margin: 20px;
-    padding: 20px;
-    color: rgb(102, 32, 110);*/
     background-color: #F48C06;
     border-radius: 15px;
     min-width: 400px;
     min-height: 100px;
     margin: 20px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items:flex-start;
     flex-basis: 180px;
 }
 
-.first-box-dots{
-    /*display: flex;
+.second-box{
+    background-color: #F48C06;
+    border-radius: 15px;
+    min-width: 400px;
+    min-height: 100px;
     margin: 20px;
-    padding: 20px;
-    color: rgb(102, 32, 110);*/
+    display: flex;
+    justify-content: space-evenly;
+    align-items:flex-start;
+    flex-basis: 180px;
+}
+
+.third-box{
+    background-color: #F48C06;
+    border-radius: 15px;
+    min-width: 400px;
+    min-height: 100px;
+    margin: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items:flex-start;
+    flex-basis: 180px;
+}
+
+.fourth-box{
+    background-color: #F48C06;
+    border-radius: 15px;
+    min-width: 400px;
+    min-height: 100px;
+    margin: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items:flex-start;
+    flex-basis: 180px;
+}
+
+.fifth-box{
+    background-color: #F48C06;
+    border-radius: 15px;
+    min-width: 400px;
+    min-height: 100px;
+    margin: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items:flex-start;
+    flex-basis: 180px;
+}
+
+.sixth-box{
+    background-color: #F48C06;
+    border-radius: 15px;
+    min-width: 400px;
+    min-height: 100px;
+    margin: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items:center;
+    flex-basis: 180px;
+}
+
+
+
+
+/*The squares with dots in them*/
+
+.first-box-dots{
+    background-color: #03071E;
+    border-radius: none;
+    min-width: 270px;
+    min-height: 50px;
+    margin: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items:center;
+    flex-basis: 180px;
+}
+
+.second-box-dots{
+    background-color: #03071E;
+    border-radius: none;
+    min-width: 270px;
+    min-height: 50px;
+    margin: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items:center;
+    flex-basis: 180px;
+}
+
+.third-box-dots{
+    background-color: #03071E;
+    border-radius: none;
+    min-width: 270px;
+    min-height: 50px;
+    margin: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items:center;
+    flex-basis: 180px;
+}
+
+.fourth-box-dots{
+    background-color: #03071E;
+    border-radius: none;
+    min-width: 270px;
+    min-height: 50px;
+    margin: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items:center;
+    flex-basis: 180px;
+}
+
+.fifth-box-dots{
     background-color: #03071E;
     border-radius: none;
     min-width: 270px;
