--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,4 @@
 body{
-    max-width: 200px;
 }
 
 /*element.style{
@@ -8,15 +7,18 @@ body{
 }*/
 
 .red-box{
-    z-index: 10;
+    z-index: 10px;
     margin-left: 50px;
     background-color: #370617;
     height: 50vh; 
-    width: 100vh;
+    width: 110vh;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
+    justify-content:center;
+    align-items:baseline;
+    position: relative;
+    flex-wrap: wrap;
+    min-height: 60%;
 }
 
 .yellow-box{
@@ -25,11 +27,13 @@ body{
     z-index: 10;
     background-color: #FAA307;
     height: 50vh; 
-    width: 100vh;
+    width: 110vh;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items:left;
+    flex-wrap: wrap;
+    min-height: 60%;
 }
 
 /*The squares with squares in them*/
@@ -39,10 +43,11 @@ body{
     border-radius: 15px;
     min-width: 400px;
     min-height: 100px;
-    margin: 20px;
+    margin: 10px;
     display: flex;
     justify-content: space-evenly;
     align-items:flex-start;
+    flex-direction: column;
     flex-basis: 180px;
 }
 
@@ -51,10 +56,11 @@ body{
     border-radius: 15px;
     min-width: 400px;
     min-height: 100px;
-    margin: 20px;
+    margin: 10px;
     display: flex;
     justify-content: space-evenly;
     align-items:flex-start;
+    flex-direction: column;
     flex-basis: 180px;
 }
 
@@ -63,10 +69,11 @@ body{
     border-radius: 15px;
     min-width: 400px;
     min-height: 100px;
-    margin: 20px;
+    margin: 10px;
     display: flex;
     justify-content: space-evenly;
     align-items:flex-start;
+    flex-direction: column;
     flex-basis: 180px;
 }
 
@@ -75,10 +82,11 @@ body{
     border-radius: 15px;
     min-width: 400px;
     min-height: 100px;
-    margin: 20px;
+    margin: 10px;
     display: flex;
     justify-content: space-evenly;
     align-items:flex-start;
+    flex-direction: column;
     flex-basis: 180px;
 }
 
@@ -87,10 +95,11 @@ body{
     border-radius: 15px;
     min-width: 400px;
     min-height: 100px;
-    margin: 20px;
+    margin: 10px;
     display: flex;
     justify-content: space-evenly;
     align-items:flex-start;
+    flex-direction: column;
     flex-basis: 180px;
 }
 
@@ -99,10 +108,11 @@ body{
     border-radius: 15px;
     min-width: 400px;
     min-height: 100px;
-    margin: 20px;
+    margin: 10px;
     display: flex;
     justify-content: space-evenly;
     align-items:center;
+    flex-direction: column;
     flex-basis: 180px;
 }
 
@@ -116,7 +126,7 @@ body{
     border-radius: none;
     min-width: 270px;
     min-height: 50px;
-    margin: 20px;
+    margin: 10px;
     display: flex;
     justify-content: space-evenly;
     align-items:center;
@@ -124,11 +134,11 @@ body{
 }
 
 .second-box-dots{
-    background-color: #03071E;
+    background-color: #6A040F;
     border-radius: none;
     min-width: 270px;
     min-height: 50px;
-    margin: 20px;
+    margin: 10px;
     display: flex;
     justify-content: space-evenly;
     align-items:center;
@@ -140,7 +150,7 @@ body{
     border-radius: none;
     min-width: 270px;
     min-height: 50px;
-    margin: 20px;
+    margin: 10px;
     display: flex;
     justify-content: space-evenly;
     align-items:center;
@@ -148,11 +158,11 @@ body{
 }
 
 .fourth-box-dots{
-    background-color: #03071E;
+    background-color: #6A040F;
     border-radius: none;
     min-width: 270px;
     min-height: 50px;
-    margin: 20px;
+    margin: 10px;
     display: flex;
     justify-content: space-evenly;
     align-items:center;
@@ -164,7 +174,7 @@ body{
     border-radius: none;
     min-width: 270px;
     min-height: 50px;
-    margin: 20px;
+    margin: 10px;
     display: flex;
     justify-content: space-evenly;
     align-items:center;
@@ -193,7 +203,7 @@ body{
     border-radius: 15px;
     min-width: 100px;
     min-height: 100px;
-    margin: 20px;
+    margin: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
