--- a/style/index.css
+++ b/style/index.css
@@ -1,11 +1,3 @@
-body{
-}
-
-/*element.style{
-    flex-direction:column;
-    justify-content: flex-end;
-}*/
-
 /*The squares with squares in them*/
 
 .red-box{
@@ -21,6 +13,7 @@ body{
     position: relative;
     flex-wrap: wrap;
     min-height: 60%;
+    max-width: 100%;
     padding: 25px 0;
 }
 
@@ -39,23 +32,7 @@ body{
     flex-direction: row;
     flex-basis: 10px;
 }
-.fb-one{
-    background-color: #9D0208;
-    border-radius: 15px;
-    min-width: 78px;
-    min-height: 78px;
-    margin: 10px;
-}
-
-.fb-two{
-    background-color: #9D0208;
-    border-radius: 15px;
-    min-width: 78px;
-    min-height: 78px;
-    margin: 10px;
-}
-
-.fb-three{
+.fb{
     background-color: #9D0208;
     border-radius: 15px;
     min-width: 78px;
@@ -77,23 +54,7 @@ body{
     flex-basis: 10px;
 }
 
-.sb-one{
-    background-color: #9D0208;
-    border-radius: 15px;
-    min-width: 78px;
-    min-height: 78px;
-    margin: 10px;
-}
-
-.sb-two{
-    background-color: #9D0208;
-    border-radius: 15px;
-    min-width: 78px;
-    min-height: 78px;
-    margin: 10px;
-}
-
-.sb-three{
+.sb{
     background-color: #9D0208;
     border-radius: 15px;
     min-width: 78px;
@@ -116,23 +77,7 @@ body{
     flex-basis: 10px;
 }
 
-.tb-one{
-    background-color: #9D0208;
-    border-radius: 15px;
-    min-width: 78px;
-    min-height: 78px;
-    margin: 10px;
-}
-
-.tb-two{
-    background-color: #9D0208;
-    border-radius: 15px;
-    min-width: 78px;
-    min-height: 78px;
-    margin: 10px;
-}
-
-.tb-three{
+.tb{
     background-color: #9D0208;
     border-radius: 15px;
     min-width: 78px;
@@ -154,7 +99,7 @@ body{
     flex-basis: 10px;
 }
 
-.fthb-one{
+.fthb{
     background-color: #9D0208;
     border-radius: 15px;
     min-width: 78px;
@@ -162,15 +107,7 @@ body{
     margin: 10px;
 }
 
-.fthb-two{
-    background-color: #9D0208;
-    border-radius: 15px;
-    min-width: 78px;
-    min-height: 78px;
-    margin: 10px;
-}
-
-.fthb-three{
+.fthb-third{
     background-color: #9D0208;
     border-radius: 15px;
     min-width: 78px;
@@ -193,7 +130,7 @@ body{
     flex-basis: 10px;
 }
 
-.fifthb-one{
+.fifthb{
     background-color: #9D0208;
     border-radius: 15px;
     min-width: 78px;
@@ -201,7 +138,7 @@ body{
     margin: 10px;
 }
 
-.fifthb-two{
+.fifthb-sec{
     background-color: #9D0208;
     border-radius: 15px;
     min-width: 78px;
@@ -210,13 +147,6 @@ body{
     align-self: center;
 }
 
-.fifthb-three{
-    background-color: #9D0208;
-    border-radius: 15px;
-    min-width: 78px;
-    min-height: 78px;
-    margin: 10px;
-}
 
 .paragraph{
     color: white;
@@ -238,7 +168,7 @@ body{
     flex-basis: 10px;
 }
 
-.sixb-one{
+.sixb{
     background-color: #9D0208;
     border-radius: 15px;
     min-width: 78px;
@@ -246,7 +176,7 @@ body{
     margin: 10px;
 }
 
-.sixb-two{
+.sixb-sec{
     background-color: #9D0208;
     border-radius: 15px;
     min-width: 78px;
@@ -255,7 +185,7 @@ body{
     flex-grow: 2;
 }
 
-.sixb-three{
+.sixb{
     background-color: #9D0208;
     border-radius: 15px;
     min-width: 78px;
@@ -269,17 +199,18 @@ body{
 .yellow-box{
     margin-top: 10px;
     margin-left: 50px;
-    z-index: 10;
+    z-index: 10px;
     background-color: #FAA307;
     height: 55vh; 
     width: 100vh;
     display: flex;
-    flex-direction: column;
-    justify-content:flex-start;
+    flex-direction: row;
+    justify-content:baseline;
     align-items:center;
-    position:absolute;
+    position: relative;
     flex-wrap: wrap;
     min-height: 60%;
+    max-width: 100%;
     padding: 25px 0;
 }
 
@@ -290,11 +221,22 @@ body{
     min-height: 220px;
     margin: 10px;
     display: flex;
-    justify-content: space-evenly;
-    align-items:center;
-    flex-direction: column;
-    flex-basis: 180px;
+    justify-content:baseline;
+    align-items:flex-end;
+    flex-direction: row;
+    flex-basis: 10px;
+    flex-wrap:wrap;
 }
+
+.dot {
+   
+    background-color: #748CAB;
+    border-radius: 50%;
+    min-width: 50px;
+    min-height: 50px;
+    margin: 10px;
+  }
+
 
 .second-box-dots{
     background-color: #6A040F;
@@ -305,24 +247,12 @@ body{
     display: flex;
     justify-content: space-evenly;
     align-items:center;
-    flex-direction: column;
+    flex-direction: row;
     flex-basis: 180px;
+    flex-wrap:wrap;
 }
 
 .third-box-dots{
-    background-color: #6A040F;
-    border-radius: none;
-    min-width: 273px;
-    min-height: 220px;
-    margin: 10px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items:center;
-    flex-direction: column;
-    flex-basis: 180px;
-}
-
-.fourth-box-dots{
     background-color: #03071E;
     border-radius: none;
     min-width: 273px;
@@ -331,8 +261,23 @@ body{
     display: flex;
     justify-content: space-evenly;
     align-items:center;
-    flex-direction: column;
+    flex-direction: row;
     flex-basis: 180px;
+    flex-wrap:wrap;
+}
+
+.fourth-box-dots{
+    background-color: #6A040F;
+    border-radius: none;
+    min-width: 273px;
+    min-height: 220px;
+    margin: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items:center;
+    flex-direction: row;
+    flex-basis: 180px;
+    flex-wrap:wrap;
 }
 
 .fifth-box-dots{
@@ -342,10 +287,11 @@ body{
     min-height: 220px;
     margin: 10px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items:center;
-    flex-direction: column;
+    flex-direction: row;
     flex-basis: 180px;
+    flex-wrap:wrap;
 }
 
 /*
@@ -360,7 +306,7 @@ body{
 
     align-items: flex-start;
 
-    flex-direction: column; 
+    flex-direction: row; 
  
 }
 
